<resources>
    <string name="app_name" translatable="false">智慧收银系统</string>
    <string name="company_name" translatable="false">贵州冠宇科技有限公司</string>
    <string name="app_version" translatable="false">版本号：</string>
    <string name="login_hint_username" translatable="false">请输入账号</string>
    <string name="login_hint_password" translatable="false">请输入密码</string>
    <string name="login_login" translatable="false">登录</string>
    <string name="loading" translatable="false">加载中...</string>
    <string name="app_version_code" translatable="false">版本号：</string>
    <string name="title_main" translatable="false">功能菜单</string>
    <string name="tab_cashier" translatable="false">收银台</string>
    <string name="tab_storage" translatable="false">入库</string>
    <string name="tab_goods" translatable="false">商品编辑</string>
    <string name="tab_inventory" translatable="false">盘点</string>
    <string name="tab_bill" translatable="false">销售单据</string>
    <string name="tab_bin" translatable="false">打开钱箱</string>
    <string name="tab_message" translatable="false">消息中心</string>
    <string name="tab_settlement" translatable="false">财务结算</string>
    <string name="cashier_hint_search" translatable="false">请输入商品条码,名称</string>
    <string name="title_cashier" translatable="false">收银台</string>
    <string name="cashier_title_bar_code" translatable="false">商品条码</string>
    <string name="cashier_title_name" translatable="false">商品名称</string>
    <string name="cashier_title_single_price" translatable="false">单价</string>
    <string name="cashier_title_amount" translatable="false">数量</string>
    <string name="cashier_title_total_price" translatable="false">金额</string>
    <string name="cashier_title_operate" translatable="false">操作</string>
    <string name="cashier_reduce" translatable="false">-</string>
    <string name="cashier_pluse" translatable="false">+</string>
    <string name="cashier_cashier" translatable="false">收银:&#160;￥0</string>
    <string name="cashier_cashier_money" translatable="false">收银:&#160;￥</string>
    <string name="cashier_number" translatable="false">件数</string>
    <string name="cashier_money" translatable="false">总额</string>
    <string name="cashier_money_bin_prompt" translatable="false">请检查钱箱是否连接</string>
    <string name="collect_total_money" translatable="false">￥</string>
    <string name="title_collect" translatable="false">收银</string>
    <string name="collect_cash" translatable="false">现金:</string>
    <string name="collect_change" translatable="false">找零:</string>
    <string name="collect_casher" translatable="false">现金支付</string>
    <string name="collect_print" translatable="false">打印单据</string>
    <string name="cash_print_usb_connected" translatable="false">打印机已经连接</string>
    <string name="cash_print_usb_permission" translatable="false">没有访问打印机权限</string>
    <string name="trade_code" translatable="false">交易号:</string>
    <string name="trade_date" translatable="false">交易时间:</string>
    <string name="trade_total_money" translatable="false">总金额：</string>
    <string name="trade_should_total_money" translatable="false">应收金额：</string>
    <string name="trade_actual_total_money" translatable="false">实收金额：</string>
    <string name="trade_change_total_money" translatable="false">找零金额：</string>
    <string name="trade_footer_prompt_one" translatable="false">为了您的权益，请妥善保管好小票</string>
    <string name="trade_footer_prompt_two" translatable="false">谢谢惠顾!!!   欢迎下次光临!!!</string>
    <string name="collect_cash_print_prompt" translatable="false">请检查打印机是否连接</string>
    <string name="collect_please_select_goods" translatable="false">请先购买商品才能收银</string>
    <string name="collect_balance" translatable="false">余额支付</string>
    <string name="collect_connect_camera" translatable="false">请检查摄像头是否连接</string>
    <string name="please_input_amount" translatable="false">请输入商品数量</string>
    <string name="title_storage" translatable="false">入库</string>
    <string name="storage_title_kinds" translatable="false">分类</string>
    <string name="storage_title_status" translatable="false">状态</string>
    <string name="storage_title_buying_price" translatable="false">进货价</string>
    <string name="storage_title_sale_price" translatable="false">售价</string>
    <string name="storage_title_storage" translatable="false">库存</string>
    <string name="login_please_select_device" translatable="false">请选择商店对应的设备</string>
    <string name="cancle" translatable="false">取消</string>
    <string name="certain" translatable="false">确定</string>
    <string name="please_select_device" translatable="false">请选择设备</string>
    <string name="goods_code" translatable="false">商品编码：</string>
    <string name="goods_name" translatable="false">商品名称：</string>
    <string name="goods_amount" translatable="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#8201;数量：</string>
    <string name="goods_operate" translatable="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#8201;操作：</string>
    <string name="add" translatable="false">增加</string>
    <string name="reduce" translatable="false">减少</string>
    <string name="save" translatable="false">保存</string>
    <string name="less_than_zero" translatable="false">输入数量必须大于0</string>
    <string name="less_than_storge" translatable="false">输入数量不能大于库存</string>
    <string name="title_goods_edit" translatable="false">商品编辑</string>
    <string name="add_goods" translatable="false">新增商品</string>
    <string name="title_add_goods" translatable="false">新增商品</string>
    <string name="goods_product" translatable="false">生成</string>
    <string name="goods_photo" translatable="false">商品图片</string>
    <string name="goods_sale_price" translatable="false">&#160;&#160;&#160;&#160;&#160;销售价：</string>
    <string name="goods_buy_price" translatable="false">&#160;&#160;&#160;&#160;&#160;进货价：</string>
    <string name="goods_storage" translatable="false">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#8201;库存：</string>
    <string name="goods_kinds" translatable="false">商品分类：</string>
    <string name="goods_status" translatable="false">商品状态：</string>
    <string name="goods_date" translatable="false">生产日期：</string>
    <string name="goods_protect" translatable="false">保质期/天&#160;&#160;</string>
    <string name="goods_storage_up" translatable="false">上架时间：</string>
    <string name="goods_storage_down" translatable="false">下架时间：</string>
    <string name="please_produce_code" translatable="false">请生成商品编码</string>
    <string name="please_input_goods_name" translatable="false">请输入商品名称</string>
    <string name="please_input_sale_price" translatable="false">请填写销售价格</string>
    <string name="please_input_storage" translatable="false">请填写商品库存</string>
    <string name="please_input_kinds" translatable="false">请选择商品类型</string>
    <string name="please_input_status" translatable="false">请选择商品状态</string>
    <string name="please_input_produce_date" translatable="false">请选择生产日期</string>
    <string name="please_input_protect" translatable="false">请填写保质期</string>
    <string name="please_input_photo" translatable="false">请上传商品图片</string>
    <string name="title_update_goods" translatable="false">修改商品</string>
    <string name="inventory_storage" translatable="false">原库存</string>
    <string name="inventory_difference_storage" translatable="false">差异库存</string>
    <string name="inventory_after_storage" translatable="false">盘后库存</string>
    <string name="inventory_total" translatable="false">合计：原库存总数：</string>
    <string name="inventory_already" translatable="false">已盘库存数：</string>
    <string name="inventory_difference" translatable="false">差异库存数：</string>
    <string name="title_form" translatable="false">盘点清单</string>
    <string name="form_inventory" translatable="false">盘点库存：</string>
    <string name="form_origin" translatable="false">原库存：</string>
    <string name="form_difference" translatable="false">差异库存：</string>
    <string name="please_input_storage_up" translatable="false">请输入上架时间</string>
    <string name="please_input_storage_down" translatable="false">请输入下架时间</string>
    <string name="sure" translatable="false">确定</string>
    <string name="title_order" translatable="false">销售单据</string>
    <string name="order_title_number" translatable="false">数量</string>
    <string name="order_title_single" translatable="false">单价</string>
    <string name="order_title_price" translatable="false">金额</string>
    <string name="order_detail_total" translatable="false">共计：</string>
    <string name="order_detail_total_money" translatable="false">商品总金额：</string>
    <string name="order_detail_should_collect" translatable="false">应收：</string>
    <string name="order_detail_actual_collect" translatable="false">实收：</string>
    <string name="order_data_error" translatable="false">订单数据获取异常，无法打印</string>
    <string name="title_setting" translatable="false">设置</string>
    <string name="setting_account_manager" translatable="false">账号管理</string>
    <string name="setting_about_we" translatable="false">关于我们</string>
    <string name="company_phone" translatable="false">咨询热线：0851-86815155</string>
    <string name="company_fax" translatable="false">售货服务与传真：0851-86815155</string>
    <string name="company_email" translatable="false">邮箱：1628650565@qq.com</string>
    <string name="company_address" translatable="false">地址：贵州省贵阳市贵州省科学城7号楼11层</string>
    <string name="account_name" translatable="false">当前帐号：</string>
    <string name="app_logout" translatable="false">退出登录</string>
    <string name="app_modify_password" translatable="false">修改密码</string>
    <string name="modify_origin_password" translatable="false">原密码:</string>
    <string name="modify_new_password" translatable="false">新密码:</string>
    <string name="title_modify_password" translatable="false">修改密码</string>
    <string name="please_input_old_password" translatable="false">请输入原始密码</string>
    <string name="please_input_new_password" translatable="false">请输入新密码</string>
    <string name="finance_code" translatable="false">结算编号</string>
    <string name="finance_money" translatable="false">结算金额</string>
    <string name="finance_state" translatable="false">结算状态</string>
    <string name="finance_bank_flow" translatable="false">转账银行流水</string>
    <string name="finance_date" translatable="false">转账日期</string>
    <string name="finance_operate" translatable="false">操作</string>
    <string name="finance_bill_detail" translatable="false">清单明细</string>
    <string name="finance_bill_no" translatable="false">结算单号：</string>
    <string name="finance_order_code" translatable="false">订单编号</string>
    <string name="finance_shcool_code" translatable="false">学号</string>
    <string name="finance_name" translatable="false">姓名</string>
    <string name="finance_goods_num" translatable="false">商品数量</string>
    <string name="finance_goods_money" translatable="false">商品金额</string>
    <string name="finance_status" translatable="false">状态</string>
    <string name="finance_order_time" translatable="false">订单时间</string>
    <string name="title_finance_detail" translatable="false">清单明细</string>
    <string name="please_up_more_than_down" translatable="false">库存上限必须大于等于库存下限</string>
    <string name="please_put_same_finger" translatable="false">请不要更换手指</string>
    <string name="regist_finger_success" translatable="false">指纹注册成功</string>
    <string name="pay_type_hint" translatable="false">支付方式</string>
    <string name="please_select_pay_type" translatable="false">请选择付款方式</string>
    <string name="pay_fv" translatable="false">指纹支付</string>
    <string name="pay_face" translatable="false">刷脸支付</string>
    <string name="storage_list" translatable="false">入库记录</string>
    <string name="storage_number" translatable="false">入库数量</string>
    <string name="storage_time" translatable="false">入库时间</string>
    <string name="add_scan_all" translatable="false">查看所有</string>
    <string name="search" translatable="false">搜索</string>
</resources>