<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">


    <com.gykj.cashier.widget.HeaderLayoutView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:id="@+id/cashier_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_60"
        android:orientation="horizontal"
        android:background="@color/color_f2f2f2"
        android:layout_marginLeft="@dimen/space_24"
        android:layout_marginRight="@dimen/space_24"
        android:layout_marginTop="@dimen/space_24">


        <TextView
            style="@style/lay_cashier_title_textview_style"
            android:layout_width="@dimen/space_174"
            android:text="@string/finance_code"/>

        <TextView
            style="@style/lay_cashier_title_textview_style"
            android:layout_width="@dimen/space_110"
            android:text="@string/finance_money"/>

        <TextView
            style="@style/lay_cashier_title_textview_style"
            android:layout_width="@dimen/space_110"
            android:text="@string/finance_state"/>


        <TextView
            style="@style/lay_cashier_title_textview_style"
            android:layout_width="@dimen/space_230"
            android:text="@string/finance_bank_flow"/>


        <TextView
            style="@style/lay_cashier_title_textview_style"
            android:layout_width="@dimen/space_150"
            android:text="@string/finance_date"/>

        <TextView
            style="@style/lay_cashier_title_textview_style"
            android:layout_width="@dimen/space_134"
            android:text="@string/finance_operate"/>

    </LinearLayout>


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/finance_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/space_24"
        android:layout_marginLeft="@dimen/space_24"
        android:layout_marginBottom="@dimen/space_24"
        android:layout_below="@+id/cashier_title_layout"
        android:layout_above="@+id/cashier_buttom_layout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/finance_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>




</LinearLayout>