<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/space_500"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_pay_type_background">


    <TextView
        android:id="@+id/dial_title_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_88"
        android:textColor="@color/color_298be8"
        android:textSize="@dimen/space_34"
        android:text="@string/pay_type_hint"
        android:gravity="center"/>

    <ImageView
        style="@style/lay_divide_line_e5e5e5_horizontal"
        android:contentDescription="@null"/>


    <TextView
        android:id="@+id/dial_phone_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_140"
        android:gravity="center"
        android:textSize="@dimen/space_40"
        android:textColor="@color/color_333333"
        android:text="@string/please_select_pay_type"/>


    <ImageView
        style="@style/lay_divide_line_e5e5e5_horizontal"
        android:contentDescription="@null"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_90"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pay_fv_tv"
            android:layout_width="@dimen/space_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/space_34"
            android:gravity="center"
            android:text="@string/pay_fv"/>


        <ImageView
            style="@style/lay_divide_line_e5e5e5_vertical"
            android:contentDescription="@null"/>

        <TextView
            android:id="@+id/pay_face_tv"
            android:layout_width="@dimen/space_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/color_04b685"
            android:textSize="@dimen/space_34"
            android:gravity="center"
            android:text="@string/pay_face"/>
    </LinearLayout>

</LinearLayout>